--- a/AdventOfCode2025.csproj
+++ b/AdventOfCode2025.csproj
@@ -9,10 +9,9 @@
 
     <ItemGroup>
       <None Remove="Inputs\Day1.txt" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Inputs\" />
+      <Content Include="Inputs\Day1.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
