--- a/AdventOfCode2025.csproj
+++ b/AdventOfCode2025.csproj
@@ -12,6 +12,10 @@
       <Content Include="Inputs\Day1.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <None Remove="Inputs\Day2.txt" />
+      <Content Include="Inputs\Day2.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
