--- a/AdventOfCode2025.csproj
+++ b/AdventOfCode2025.csproj
@@ -16,6 +16,10 @@
       <Content Include="Inputs\Day2.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <None Remove="Inputs\Day3.txt" />
+      <Content Include="Inputs\Day3.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
