--- a/AdventOfCode2025.csproj
+++ b/AdventOfCode2025.csproj
@@ -28,6 +28,10 @@
       <Content Include="Inputs\Day5.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
+      <None Remove="Inputs\Day6.txt" />
+      <Content Include="Inputs\Day6.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
